Add skills page

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -9,6 +9,7 @@
         "title": "My Work",
         "description": "Coming soon..."
     },
+    "skills": "My skills",
     "principalBanner": {
         "welcome": "¡Welcome to my",
         "portfolio": "Portfolio",
