--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -9,6 +9,7 @@
       "title": "Mi Trabajo",
       "description": "Proximamente..."
    },
+   "skills": "Habilidades",
    "principalBanner": {
         "welcome": "¡Bienvenido a mi",
         "portfolio": "Portafolio",
